# OxiDB

./: .gitignore  ARCHITECTURE_ANALYSIS.md  BUILD_AND_TEST_RESOLUTION_SUMMARY.md  BUILD_RESOLUTION_SUMMARY.md  CHECKLIST.md  CLEANUP_SUMMARY.md  COLUMN_ACCESS_IMPROVEMENT.md  COMPREHENSIVE_TEST_REPORT.md  CONTINUED_CLEANUP_REPORT.md  CRITICAL_FIXES_REPORT.md  Cargo.toml  Cargo.toml.bak  DEPENDENCY_REDUCTION_REPORT.md  DESIGN_PRINCIPLES_ENHANCEMENT_REPORT.md  DESIGN_PRINCIPLES_IMPLEMENTATION_REPORT.md  DESIGN_PRINCIPLES_REVIEW.md  DEVELOPMENT_COMPLETION_SUMMARY.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROGRESS.md  ENHANCED_RAG_GRAPHRAG_ANALYSIS.md  EXAMPLES_README.md  FINAL_CLEANUP_REPORT.md  GENERIC_RAG_GRAPHRAG_IMPLEMENTATION.md  GRAPHRAG_SUMMARY.md  HYBRIDRAG_VALIDATION_REPORT.md  HYBRID_RAG_SQL_INJECTION_FIX.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  JSONVALUE_OPTIMIZATION_SUMMARY.md  LATEST_IMPROVEMENTS_SUMMARY.md  OPTIMIZATION_IMPROVEMENTS_SUMMARY.md  Oxidb.toml  PATTERN_MATCHING_OPTIMIZATION.md  PHASE_5_5_COMPLETION_REPORT.md  PHASE_5_PROGRESS_REPORT.md  PHASE_6_ADVANCEMENT_REPORT.md  PHASE_7_2_ADVANCEMENT_REPORT.md  PHASE_7_3_ADVANCEMENT_REPORT.md  PHASE_7_3_EXAMPLES_COMPLETION_REPORT.md  PHASE_7_4_ADVANCEMENT_REPORT.md  (+292 more)
.config/: nextest.toml
.github/workflows/: rust.yml
benches/: database_benchmarks.rs
data/: oxidb.wal
docs/: CLUSTERING_COEFFICIENT_OPTIMIZATION.md  GRAPHRAG.md  GRAPHRAG_FIELD_POPULATION_FIX.md  GRAPHRAG_ID_MAPPING_FIX.md  GRAPH_FACTORY_ENHANCEMENT.md  PERSISTENCE_IMPROVEMENTS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  sql_support.md
docs/architecture/: 00_vision.md  progress_ledger.md  software_architecture_document.md  software_design_document.md
docs/architecture/ADR/: 000-grand-unifying-manifesto.md  001-storage-engine.md  002-btree-index-strategy.md
examples/: DATABASE_EXAMPLES_README.md  README.md  advanced_integration_tests.rs  comprehensive_edge_case_tests.rs  comprehensive_sql_demo.rs  comprehensive_test.rs  comprehensive_validation_suite.rs  concurrent_operations_demo.rs  connection_api_demo.rs  document_search_rag.rs  ecommerce_website.rs  error_handling_demo.rs  final_comprehensive_tests.rs  final_functionality_summary.rs  generic_rag_comparison.rs  graphrag_config_demo.rs  hybrid_rag_demo.rs  hybridrag_validation_test.rs  knowledge_graph_rag.rs  mongodb_style_document_demo.rs  mysql_style_ecommerce.rs  performance_benchmark.rs  performance_edge_tests.rs  performance_optimization_demo.rs  postgresql_analytics_demo.rs  production_ready_tests.rs  real_world_scenarios.rs  robust_edge_case_tests.rs  scheduler_demo.rs  shakespeare_rag_comparison.rs  shakespeare_rag_comparison_improved.rs  simple_functionality_test.rs  simple_hybridrag_validation.rs  simple_oxidb_test.rs  simple_working_tests.rs  sql_compatibility_demo.rs  test_runner.rs  wasm_test.rs  working_edge_case_tests.rs  working_examples_demo.rs  (+1 more)
examples/data_type_tests/: Cargo.toml  README.md
examples/data_type_tests/src/: main.rs
examples/file_server/: BUILD_NOTES.md  Cargo.toml  FINAL_SUMMARY.md  README.md  RESOLUTION_SUMMARY.md  test_server.sh
examples/file_server/src/: api.rs  auth.rs  db.rs  handlers.rs  handlers_v2.rs  main.rs  minimal.rs  models.rs  test.rs  working.rs
examples/file_server/static/: app.js  index.html  style.css
examples/graphrag_demo/: Cargo.toml
examples/graphrag_demo/src/: main.rs
examples/performance_demo/: Cargo.toml
examples/performance_demo/data/: oxidb.wal
examples/performance_demo/src/: main.rs
examples/simple_blog/: Cargo.toml  README.md  oxidb.wal
examples/simple_blog/src/: main.rs
examples/todo_app/: Cargo.toml  README.md
examples/todo_app/oxidb_indexes/: default_value_index.idx
examples/todo_app/src/: main.rs
examples/todo_app/tests/: integration_tests.rs
examples/user_auth_files/: Cargo.toml  main.rs
oxidb_indexes/: default_value_index.idx  idx_products_10388_id.idx  idx_products_9142_id.idx  idx_test_pk_id.idx  idx_test_unique_email.idx  idx_test_unique_nullable_phone.idx  idx_users_id.idx  idx_users_username.idx
shakespeare_texts/: hamlet.txt  macbeth.txt  midsummer.txt
src/: lib.rs  wasm.rs
src/api/: api_impl.rs  connection.rs  db.rs  errors.rs  implementation.rs  mod.rs  traits.rs  types.rs
src/api/tests/: db_tests.rs  mod.rs  query_result_iter_tests.rs  similarity_search_tests.rs
src/core/: config.rs  mod.rs
src/core/common/: bincode_compat.rs  byteorder.rs  cow_utils.rs  crc32.rs  error.rs  errors.rs  hex.rs  io_utils.rs  lock_utils.rs  mod.rs  result_utils.rs  serialization.rs  traits.rs  types.rs
src/core/common/tests/: error_tests.rs
src/core/common/types/: data_type.rs  ids.rs  mod.rs  row.rs  schema.rs  tests.rs  value.rs
src/core/connection/: mod.rs  pool.rs
src/core/execution/: expression_evaluator.rs  mod.rs  operators.rs
src/core/execution/operators/: aggregate.rs  delete.rs  filter.rs  index_scan.rs  mod.rs  nested_loop_join.rs  project.rs  table_scan.rs
src/core/graph/: algorithms.rs  mod.rs  storage.rs  traversal.rs  types.rs
src/core/indexing/: hash_index.rs  manager.rs  mod.rs  traits.rs
src/core/optimizer/: mod.rs  optimizer.rs  planner.rs  rule.rs
src/core/performance/: analytics.rs  metrics.rs  mod.rs  monitor.rs  profiler.rs
src/core/query/: commands.rs  engine.rs  executor.rs  mod.rs
src/core/rag/: core_components.rs  document.rs  embedder.rs  graphrag.rs  hybrid.rs  mod.rs  retriever.rs
src/core/recovery/: analysis.rs  mod.rs  redo.rs  tables.rs  types.rs  undo.rs
src/core/scheduler/: mod.rs
src/core/sql/: advanced.rs  mod.rs
src/core/storage/: manager.rs  mod.rs
src/core/transaction/: acid_manager.rs  errors.rs  lock_manager.rs  manager.rs  mod.rs  transaction.rs
src/core/types/: mod.rs  schema.rs
src/core/vector/: mod.rs  search.rs  similarity.rs  storage.rs  transaction.rs
src/core/wal/: log_manager.rs  log_record.rs  mod.rs  reader.rs  writer.rs
src/core/zero_cost/: borrowed.rs  iterators.rs  mod.rs  views.rs
src/event_engine/: README.md  mod.rs
src/event_engine/handler/: README.md  core.rs  mod.rs  processors.rs  tests.rs  types.rs
(+115 files in other folders)
