[package]
name = "oxidb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.0"
paste = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3" # For binary serialization of index
tokio = { version = "1", features = ["full"] }
toml = "0.8.10"
byteorder = "1.4"
anyhow = "1.0"
serde_with = { version = "2.3.0", features = ["macros", "json", "base64"] }
uuid = { version = "1.8.0", features = ["v4"] }
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
async-trait = "0.1"
log = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8" # Or a more recent compatible version
approx = "0.5" # For floating point comparisons in tests
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # For async tests
criterion = { version = "0.5", features = ["html_reports"] } # For benchmarking

[workspace]
members = [
    "examples/data_type_tests",
    "examples/simple_blog",
    "examples/todo_app",
    "examples/user_auth_files",
    "examples/graphrag_demo",
    "examples/performance_demo",
]
resolver = "2"

[[bench]]
name = "database_benchmarks"
harness = false

[[example]]
name = "ecommerce_website"
path = "examples/ecommerce_website.rs"

[[example]]
name = "document_search_rag"
path = "examples/document_search_rag.rs"

[[example]]
name = "knowledge_graph_rag"
path = "examples/knowledge_graph_rag.rs"

[[example]]
name = "sql_compatibility_demo"
path = "examples/sql_compatibility_demo.rs"

[[example]]
name = "simple_oxidb_test"
path = "examples/simple_oxidb_test.rs"

[[example]]
name = "hybrid_rag_demo"
path = "examples/hybrid_rag_demo.rs"

[[example]]
name = "graphrag_config_demo"
path = "examples/graphrag_config_demo.rs"


