[package]
name = "oxidb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# crc32fast = "1.4.0" # Replaced with pure Rust implementation
# paste = "1.0" # Replaced with manual test implementations
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# thiserror = "1.0" # Replaced with manual error implementations
# bincode = "1.3" # Replaced with pure Rust implementation
toml = "0.8.10"
# byteorder = "1.4" # Replaced with pure Rust implementation
anyhow = "1.0"
serde_with = { version = "2.3.0", features = ["macros", "json", "base64"] }
# hex = "0.4" # Replaced with pure Rust implementation
clap = { version = "4.0", features = ["derive"] }
# sha2 = "0.10" # Removed - replaced with simple hash function to minimize dependencies
async-trait = "0.1"
# log = "0.4" # Replaced with commented out debug statements
rand = "0.8"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.8.0", features = ["v4"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
tokio = { version = "1", features = ["sync", "macros", "time", "rt"], default-features = false }
reqwest = { version = "0.11", features = ["json"], default-features = false }
uuid = { version = "1.8.0", features = ["v4", "js"] }

[dev-dependencies]
tempfile = "3.8" # Or a more recent compatible version
approx = "0.5" # For floating point comparisons in tests
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # For async tests
criterion = { version = "0.5", features = ["html_reports"] } # For benchmarking

[features]
default = []
rag_examples = []
legacy_examples = []

[workspace]
members = [
    "examples/data_type_tests",
    "examples/simple_blog",
    "examples/todo_app",
    "examples/user_auth_files",
    "examples/graphrag_demo",
    "examples/performance_demo",
    "examples/file_server",
]
resolver = "2"

[[bench]]
name = "database_benchmarks"
harness = false

[[example]]
name = "ecommerce_website"
path = "examples/ecommerce_website.rs"

[[example]]
name = "document_search_rag"
path = "examples/document_search_rag.rs"
required-features = ["rag_examples"]

[[example]]
name = "knowledge_graph_rag"
path = "examples/knowledge_graph_rag.rs"
required-features = ["rag_examples"]

[[example]]
name = "sql_compatibility_demo"
path = "examples/sql_compatibility_demo.rs"
required-features = ["legacy_examples"]

[[example]]
name = "simple_oxidb_test"
path = "examples/simple_oxidb_test.rs"

[[example]]
name = "hybrid_rag_demo"
path = "examples/hybrid_rag_demo.rs"
required-features = ["rag_examples"]

[[example]]
name = "graphrag_config_demo"
path = "examples/graphrag_config_demo.rs"
required-features = ["rag_examples"]

[[example]]
name = "performance_optimization_demo"
path = "examples/performance_optimization_demo.rs"

# Additional gated examples
[[example]]
name = "generic_rag_comparison"
path = "examples/generic_rag_comparison.rs"
required-features = ["rag_examples"]

[[example]]
name = "shakespeare_rag_comparison"
path = "examples/shakespeare_rag_comparison.rs"
required-features = ["rag_examples"]

[[example]]
name = "shakespeare_rag_comparison_improved"
path = "examples/shakespeare_rag_comparison_improved.rs"
required-features = ["rag_examples"]

[[example]]
name = "simple_hybridrag_validation"
path = "examples/simple_hybridrag_validation.rs"
required-features = ["rag_examples"]

[[example]]
name = "hybridrag_validation_test"
path = "examples/hybridrag_validation_test.rs"
required-features = ["rag_examples"]

[[example]]
name = "postgresql_analytics_demo"
path = "examples/postgresql_analytics_demo.rs"
required-features = ["legacy_examples"]

[[example]]
name = "mysql_style_ecommerce"
path = "examples/mysql_style_ecommerce.rs"
required-features = ["legacy_examples"]
