[package]
name = "file_server"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidb = { path = "../.." }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "tokio", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.22"
mime_guess = "2.0"
bytes = "1.5"
futures = "0.3"