[package]
name = "simple_blog_example"
version = "0.1.0"
edition = "2021"

[dependencies]
oxidb = { path = "../../" } # Assuming oxidb is two levels up
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
# Using chrono for dates, a common choice
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] } # For potential unique IDs if AUTOINCREMENT is not fully relied upon or for different ID strategies

[dev-dependencies]
# Add any development-specific dependencies here later if needed
# e.g., pretty_assertions = "1.0"
