[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
oxidb = { path = "../.." } # Assuming oxidb is at the root of the repo
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
