[package]
name = "user_auth_files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxidb = { path = "../../", package = "oxidb" } # Assuming oxidb is the root of the workspace
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] } # For potential timestamping, if needed later
# Basic hashing - replace with a proper crypto library for real applications
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "user_auth_files"
path = "main.rs"
